--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -22,7 +22,7 @@
             <%if(trip.activities.length <= 0){%>
                 <h4>You have not yet planned any activities.</h4>
             <%}else{%>
-                <h4>Your plans for</h4>
+                <h4>Your plans for <%=trip.tripName%>:</h4>
                 <ul class="activities">
             <%}%>
             <%for(let i = 0; i < trip.activities.length; i++){%>
